[package]
name = "redux"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
fuzzcheck = { git = "https://github.com/name-placeholder/fuzzcheck-rs.git", optional = true }
enum_dispatch = "0.3.7"

[features]
default = ["serde"]
fuzzing = ["fuzzcheck"]
